apps/webapp/frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp-frontend
  namespace: webapp
  labels:
    app: webapp-frontend
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: webapp-frontend
  template:
    metadata:
      labels:
        app: webapp-frontend
    spec:
      imagePullSecrets:
      - name: ghcr-secret
      containers:
      - name: webapp-frontend
        image: ghcr.io/agndam-corp/web-frontend:latest
        ports:
        - containerPort: 80
        resources:
          limits:
            cpu: 100m
            memory: 128Mi
          requests:
            cpu: 50m
            memory: 64Mi
