apps/webapp/frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webapp-frontend
  namespace: webapp
spec:
  selector:
    app: webapp-frontend
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
